# Industrial_robot_ros2

./: README.md
src/bot_description/: CMakeLists.txt  package.xml
src/bot_description/launch/: description.launch.py  husky_description.launch.py
src/bot_description/rviz/: description.rviz
src/bot_description/urdf/drivers/: differential_drive.urdf.xacro  omni_drive.urdf.xacro
src/bot_description/urdf/parts_urdf/: base.urdf.xacro  meccanum_wheel.urdf.xacro  wheel.urdf.xacro
src/bot_drivers/: CMakeLists.txt  package.xml
src/bot_drivers/config/: ekf.yaml  pc2laser.yaml
src/bot_drivers/launch/: pc2laser.launch.py
src/bot_gazebo/: CMakeLists.txt  package.xml
src/bot_gazebo/launch/: gazebo.launch.py  gazebo_husky.launch.py
src/bot_navigation/: CMakeLists.txt  package.xml
src/bot_navigation/config/: explore.yaml  mapping.yaml  nav_autonomous_mapping.yaml  navigation_differential.yaml  navigation_meccanum.yaml  navigation_meccanum_smac.yaml  navigation_mppi_dwb.yaml  navigation_navfn_dwb.yaml  navigation_navfn_mppi.yaml  navigation_navfn_neo copy.yaml  navigation_navfn_neo.yaml  navigation_smac2d_dwb.yaml  navigation_smac2d_neo.yaml  navigation_smacl_dwb.yaml  navigation_smacl_mppi.yaml  navigation_smacl_neo.yaml  omni_2.json
src/bot_navigation/launch/: autonomous_mapping.launch.py  mapping.launch.py  navigation.launch.py
src/bot_navigation/maps/: warehouse3d.pgm  warehouse3d.yaml
src/bot_navigation/rviz/: autonomous_mapping.rviz  mapping.rviz  navigation.rviz
src/husky_description/urdf/: husky.urdf.xacro  husky_macro.urdf.xacro  wheel.urdf.xacro
(+9 files in other folders)
