<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>bot_gazebo</name>
    <version>0.0.0</version>
    <description>bot Gazebo Package</description>
    <maintainer email="sanjaykumar.nsk5@email.com" />
    <license>BSD</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <exec_depend>robot_localization</exec_depend>
    <exec_depend>gazebo_ros_pkgs</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
        <gazebo_ros gazebo_model_path="${prefix}/models"/>
    </export>
</package>